--- a/index.html
+++ b/index.html
@@ -5,66 +5,78 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google</title>
 
-    <link rel="shortcut icon" href="./img/gfavicon.ico" type="image/x-icon" id="icon">
+    <link rel="stylesheet" href="./img/gfavicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="./style.css">
+    <title>Google Landing Page</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <header>
-        <ul id="left_header">
+    <!-- header -->
+
+    <header class="header">
+        <ul class="header__left">
             <li><a href="">About</a></li>
             <li><a href="">Store</a></li>
         </ul>
 
-        <ul id="right_header">
-            <li><a href="">Gmail</a></li>
-            <li><a href="">Images</a></li>
-            <li><a href="" title="Google Apps"></a><img id="appicon" src="./img/appicon.png" alt=""></li>
-            <li><a href=""></a><button id="Sing_In">Sing in</button></li>
+        <ul class="header__right">
+            <li><a href="">About</a></li>
+            <li><a href="">Store</a></li>
+            <li><img src="./img/appicon.png" alt="Application Icon" class="header__rigth--appicon"></li>
+            <li><button class="header__right--button" type="button">Sign In</button></li>
         </ul>
 
+        <div class="clear"></div>
     </header>
 
-    <main>
-        <img id="logo" src="./img/googlelogo.png" alt="Google Logo" />
+    <!-- main -->
 
-        <nav id="search">
-            <img id="magnifying" src="./img/magnifying_glass.jpg" alt="Search logo" />
+    <main class="main">
+        <img src="./img/googlelogo.png" alt="Logo" class="main__logo">
 
-            <input id="search_input" type="search" />
-            <a href=""><img id="microphone" src="./img/google_microphone.png" alt="Google Microphone" /></a>
-        </nav>
+        <div class="main__search-bar">
+            <img src="./img/magnifying_glass.jpg" alt="Magnifier" class="main__search-bar--magnifier">
+            <input type="search" class="main__search-bar--input">
+            <a href=""><img class="main__search-bar--microphone" src="./img/google_microphone.png" alt="microphone"></a>
+        </div>
 
+        <div class="main__buttons">
+            <button class="main__button--left">Google Search</button>
+            <button class="main__button--right">I'am Feeling Lucky</button>
+        </div>
 
-        <nav id="buttons">
-            <button id="button_left">Google Search</button>
-            <button id="button_right">I'm Feeling Lucky</button>
-        </nav>
-
-        <nav id="lang">
-            <p>Other languages you can use: <a href="" id="english">English</a></p>
-        </nav>
+        <div>
+            <p class="main__language">
+                Other Languages you can use Google : <a href="#">English</a>
+            </p>
+        </div>
     </main>
-    <footer>
-        <nav id="country">Turkey</nav>
 
-        <nav id="bottom">
-            <ul id="bottom_left">
+    <!-- footer -->
+
+    <footer class="footer">
+        <div class="footer__country">Turkey</div>
+
+        <div class="footer__bottom">
+            <ul class="footer__bottom--left">
                 <li><a href="">Advertising</a></li>
-                <li><a href="">Business</a></li>
+                <li><a href="">Businees</a></li>
                 <li><a href="">How Search Works</a></li>
             </ul>
 
-            <ul id="bottom_right">
+            <ul class="footer__bottom--right">
                 <li><a href="">Privacy</a></li>
                 <li><a href="">Terms</a></li>
-                <li><a href="">Setting</a></li>
+                <li><a href="">Settings</a></li>
             </ul>
-        </nav>
+        </div>
+
     </footer>
+
 </body>
 
 </html>
